--- a/WebBlog/src/main/webapp/WEB-INF/web.xml
+++ b/WebBlog/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,6 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>  
   
- 
-  
       
     <context-param>
     	<param-name>contextConfigLocation</param-name>
@@ -33,10 +31,16 @@
     	<url-pattern>/*</url-pattern>
     </filter-mapping>
     
+     
     
-    
-    
-    
+     <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>  
     
     
     
